--- a/Stream 2/Back End Development/Final Project/.gitignore
+++ b/Stream 2/Back End Development/Final Project/.gitignore
@@ -2,10 +2,11 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-*.idea
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+
+.xml
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
