updated ReadMe.md and ProjectBrief.md for Stream 1 Final Project and Stream 2 Final Project, added TOC to each, also did some code tidy on stream 1 final

--- a/Stream-1/Front-End-Development/Final-Project/Band-Project/package.json
+++ b/Stream-1/Front-End-Development/Final-Project/Band-Project/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "version": "1.0.0",
   "description": "Stream 1 Final Project",
-  "repository": "https://github.com/GunnerJnr/full-stack-completed-challenges/tree/master/Stream%201/Final%20Project",
+  "repository": "https://github.com/GunnerJnr/_CodeInstitute/tree/master/Stream-1/Front-End-Development/Final-Project",
   "license": "??",
   "devDependencies": { 
     "http-server": "^0.6.1",
