Added step 1 for lesson 'Deployment', please be aware this lesson instructed us to create a new repo containing the project so you might need to see here: https://github.com/GunnerJnr/we_are_social for the up to date project code and progress. We removed the settings.py from the root project dir, we also created a settings package containing all the files we will need for deployment to a server.

--- a/Stream-3/Full-Stack-Development/20.Deployment/1.How-to-seperate-online-code-from-offline-code/we_are_social/requirements.txt
+++ b/Stream-3/Full-Stack-Development/20.Deployment/1.How-to-seperate-online-code-from-offline-code/we_are_social/requirements.txt
@@ -1,23 +1,1 @@
-arrow==0.10.0
-beautifulsoup4==4.6.0
-certifi==2017.7.27.1
-chardet==3.0.4
-Django==1.11.4
-django-debug-toolbar==1.8
-django-disqus==0.5
-django-emoticons==1.2
-django-forms-bootstrap==3.1.0
-django-js-asset==0.1.1
-django-paypal==0.3.6
-django-tinymce==2.6.0
-idna==2.6
-Pillow==3.1.1
-python-dateutil==2.6.1
-pytz==2017.2
-requests==2.18.4
-six==1.10.0
-stripe==1.62.1
-urllib3==1.22
-wrapt==1.10.11
-reusable-blog-app==1.0.0
-sqlparse==0.2.3
+-r requirements/staging.txt
