--- a/Stream-3/Full-Stack-Development/21.Django REST Framework/4.User-Authentication/django_todo/requirements.txt
+++ b/Stream-3/Full-Stack-Development/21.Django REST Framework/4.User-Authentication/django_todo/requirements.txt
@@ -9,6 +9,7 @@ djangorestframework==3.6.4
 djangorestframework-jwt==1.8.0
 enum34==1.1.6
 flake8==3.4.1
+gunicorn==19.7.1
 isort==4.2.15
 lazy-object-proxy==1.3.1
 Markdown==2.6.9
